--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-vant/icons": "^0.1.0",
+    "chance": "^1.1.12",
     "classnames": "^2.5.1",
     "crypto-js": "^4.2.0",
     "jotai": "^2.9.3",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@remix-run/router": "^1.17.1",
+    "@types/chance": "^1.1.6",
     "@types/crypto-js": "^4.2.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
