--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "chance": "^1.1.12",
     "classnames": "^2.5.1",
     "crypto-js": "^4.2.0",
-    "jotai": "^2.9.3",
+    "dayjs": "^1.11.12",
+    "mobx": "^6.13.1",
+    "mobx-react-lite": "^4.0.7",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
